--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: cmd /c SET CGO_ENABLED=1 && SET GOOS=windows && SET GOARCH=amd64 && go build main.gogo build -v ./...
+      run: cmd /c SET CGO_ENABLED=1 && SET GOOS=windows && SET GOARCH=amd64 && go build -v ./...
 
     - name: Test
       run: cmd /c dir /a-d /b /s
