--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: cmd /c SET CGO_ENABLED=1 && SET GOOS=windows && SET GOARCH=amd64 && go build -o qrc2zip ./cmd/qrc2zip/qrc2zip.go
+      run: go build -v -o ./qrc2zip ./cmd/qrc2zip/qrc2zip.go
 
     - name: Test
       run: cmd /c dir /a-d /b /s
